code/rosmod_v3/ros_tools/grammar/01-Software/ROSMOD_SoftwareParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .ROSMOD_SoftwareListener import ROSMOD_SoftwareListener
else:
    from ROSMOD_SoftwareListener import ROSMOD_SoftwareListener

class ROSMOD_SoftwareParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__28=1
    T__27=2
    T__26=3
    T__25=4
    T__24=5
    T__23=6
    T__22=7
    T__21=8
    T__20=9
    T__19=10
    T__18=11
    T__17=12
    T__16=13
    T__15=14
    T__14=15
    T__13=16
    T__12=17
    T__11=18
    T__10=19
    T__9=20
    T__8=21
    T__7=22
    T__6=23
    T__5=24
    T__4=25
    T__3=26
    T__2=27
    T__1=28
    T__0=29
    ID=30
    INT=31
    DOUBLE=32
    BOOL=33
    WS=34
    COMMENT=35
    LINE_COMMENT=36

    tokenNames = [ u"<INVALID>", u"'component'", u"']'", u"'request'", u"'['", 
                   u"'msg'", u"'node'", u"':'", u"'s'", u"'<'", u"'server'", 
                   u"'publisher'", u"'package'", u"'subscriber'", u"'{'", 
                   u"'us'", u"'}'", u"'priority'", u"'='", u"'deadline'", 
                   u"';'", u"'timer'", u"'response'", u"'>'", u"'period'", 
                   u"'client'", u"'srv'", u"'/'", u"'ms'", u"'ns'", u"ID", 
                   u"INT", u"DOUBLE", u"BOOL", u"WS", u"COMMENT", u"LINE_COMMENT" ]

    RULE_start = 0
    RULE_name = 1
    RULE_datatype = 2
    RULE_value = 3
    RULE_packages = 4
    RULE_message = 5
    RULE_service = 6
    RULE_request = 7
    RULE_response = 8
    RULE_component = 9
    RULE_port = 10
    RULE_client = 11
    RULE_server = 12
    RULE_publisher = 13
    RULE_subscriber = 14
    RULE_priority = 15
    RULE_deadline = 16
    RULE_timer = 17
    RULE_period = 18
    RULE_unit = 19
    RULE_node = 20
    RULE_component_instance = 21

    ruleNames =  [ u"start", u"name", u"datatype", u"value", u"packages", 
                   u"message", u"service", u"request", u"response", u"component", 
                   u"port", u"client", u"server", u"publisher", u"subscriber", 
                   u"priority", u"deadline", u"timer", u"period", u"unit", 
                   u"node", u"component_instance" ]

    def __init__(self, input):
        super(ROSMOD_SoftwareParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ROSMOD_SoftwareParser.EOF, 0)

        def packages(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.PackagesContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.PackagesContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitStart(self)




    def start(self):

        localctx = ROSMOD_SoftwareParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44 
                self.packages()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ROSMOD_SoftwareParser.T__17):
                    break

            self.state = 49
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.NameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ROSMOD_SoftwareParser.ID, 0)

        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_name

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterName(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitName(self)




    def name(self):

        localctx = ROSMOD_SoftwareParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatatypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.DatatypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i=None):
            if i is None:
                return self.getTokens(ROSMOD_SoftwareParser.INT)
            else:
                return self.getToken(ROSMOD_SoftwareParser.INT, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(ROSMOD_SoftwareParser.ID)
            else:
                return self.getToken(ROSMOD_SoftwareParser.ID, i)

        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_datatype

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterDatatype(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitDatatype(self)




    def datatype(self):

        localctx = ROSMOD_SoftwareParser.DatatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_datatype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(self.ID)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__2:
                self.state = 54
                self.match(self.T__2)
                self.state = 55
                self.match(self.ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__25:
                self.state = 61
                self.match(self.T__25)
                self.state = 63
                _la = self._input.LA(1)
                if _la==ROSMOD_SoftwareParser.INT:
                    self.state = 62
                    self.match(self.INT)


                self.state = 65
                self.match(self.T__27)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ValueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(ROSMOD_SoftwareParser.BOOL, 0)

        def INT(self):
            return self.getToken(ROSMOD_SoftwareParser.INT, 0)

        def ID(self):
            return self.getToken(ROSMOD_SoftwareParser.ID, 0)

        def DOUBLE(self):
            return self.getToken(ROSMOD_SoftwareParser.DOUBLE, 0)

        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_value

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterValue(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitValue(self)




    def value(self):

        localctx = ROSMOD_SoftwareParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.ID) | (1 << self.INT) | (1 << self.DOUBLE) | (1 << self.BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PackagesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.PackagesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def service(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ServiceContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ServiceContext,i)


        def node(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.NodeContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.NodeContext,i)


        def component(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ComponentContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ComponentContext,i)


        def message(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.MessageContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.MessageContext,i)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_packages

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterPackages(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitPackages(self)




    def packages(self):

        localctx = ROSMOD_SoftwareParser.PackagesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_packages)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(self.T__17)
            self.state = 74 
            self.name()
            self.state = 75
            self.match(self.T__15)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__28) | (1 << self.T__24) | (1 << self.T__23) | (1 << self.T__3))) != 0):
                self.state = 80
                token = self._input.LA(1)
                if token in [self.T__24]:
                    self.state = 76 
                    self.message()

                elif token in [self.T__3]:
                    self.state = 77 
                    self.service()

                elif token in [self.T__28]:
                    self.state = 78 
                    self.component()

                elif token in [self.T__23]:
                    self.state = 79 
                    self.node()

                else:
                    raise NoViableAltException(self)

                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(self.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.MessageContext, self).__init__(parent, invokingState)
            self.parser = parser

        def value(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ValueContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ValueContext,i)


        def datatype(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.DatatypeContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,i)


        def name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.NameContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_message

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterMessage(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitMessage(self)




    def message(self):

        localctx = ROSMOD_SoftwareParser.MessageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(self.T__24)
            self.state = 88 
            self.name()
            self.state = 89
            self.match(self.T__15)
            self.state = 98 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 90 
                self.datatype()
                self.state = 91 
                self.name()
                self.state = 94
                _la = self._input.LA(1)
                if _la==ROSMOD_SoftwareParser.T__11:
                    self.state = 92
                    self.match(self.T__11)
                    self.state = 93 
                    self.value()


                self.state = 96
                self.match(self.T__9)
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ROSMOD_SoftwareParser.ID):
                    break

            self.state = 102
            self.match(self.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ServiceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ServiceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def response(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ResponseContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ResponseContext,i)


        def request(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.RequestContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.RequestContext,i)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_service

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterService(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitService(self)




    def service(self):

        localctx = ROSMOD_SoftwareParser.ServiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_service)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(self.T__3)
            self.state = 105 
            self.name()
            self.state = 106
            self.match(self.T__15)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__26:
                self.state = 107 
                self.request()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__7:
                self.state = 113 
                self.response()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(self.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequestContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.RequestContext, self).__init__(parent, invokingState)
            self.parser = parser

        def value(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ValueContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ValueContext,i)


        def name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.NameContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,i)


        def datatype(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.DatatypeContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_request

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterRequest(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitRequest(self)




    def request(self):

        localctx = ROSMOD_SoftwareParser.RequestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_request)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(self.T__26)
            self.state = 122
            self.match(self.T__15)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 123 
                self.datatype()
                self.state = 124 
                self.name()
                self.state = 127
                _la = self._input.LA(1)
                if _la==ROSMOD_SoftwareParser.T__11:
                    self.state = 125
                    self.match(self.T__11)
                    self.state = 126 
                    self.value()


                self.state = 129
                self.match(self.T__9)
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ROSMOD_SoftwareParser.ID):
                    break

            self.state = 135
            self.match(self.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ResponseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ResponseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def value(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ValueContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ValueContext,i)


        def name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.NameContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,i)


        def datatype(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.DatatypeContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_response

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterResponse(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitResponse(self)




    def response(self):

        localctx = ROSMOD_SoftwareParser.ResponseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_response)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(self.T__7)
            self.state = 138
            self.match(self.T__15)
            self.state = 147 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139 
                self.datatype()
                self.state = 140 
                self.name()
                self.state = 143
                _la = self._input.LA(1)
                if _la==ROSMOD_SoftwareParser.T__11:
                    self.state = 141
                    self.match(self.T__11)
                    self.state = 142 
                    self.value()


                self.state = 145
                self.match(self.T__9)
                self.state = 149 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ROSMOD_SoftwareParser.ID):
                    break

            self.state = 151
            self.match(self.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComponentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ComponentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def timer(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.TimerContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.TimerContext,i)


        def datatype(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,0)


        def port(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.PortContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.PortContext,i)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_component

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterComponent(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitComponent(self)




    def component(self):

        localctx = ROSMOD_SoftwareParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(self.T__28)
            self.state = 154 
            self.name()
            self.state = 155
            self.match(self.T__22)
            self.state = 156 
            self.datatype()
            self.state = 157
            self.match(self.T__15)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__19) | (1 << self.T__18) | (1 << self.T__16) | (1 << self.T__8) | (1 << self.T__4))) != 0):
                self.state = 160
                token = self._input.LA(1)
                if token in [self.T__19, self.T__18, self.T__16, self.T__4]:
                    self.state = 158 
                    self.port()

                elif token in [self.T__8]:
                    self.state = 159 
                    self.timer()

                else:
                    raise NoViableAltException(self)

                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(self.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PortContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.PortContext, self).__init__(parent, invokingState)
            self.parser = parser

        def client(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.ClientContext,0)


        def deadline(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.DeadlineContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.DeadlineContext,i)


        def server(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.ServerContext,0)


        def publisher(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.PublisherContext,0)


        def priority(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.PriorityContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.PriorityContext,i)


        def subscriber(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.SubscriberContext,0)


        def unit(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.UnitContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.UnitContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_port

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterPort(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitPort(self)




    def port(self):

        localctx = ROSMOD_SoftwareParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_port)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            token = self._input.LA(1)
            if token in [self.T__4]:
                self.state = 167 
                self.client()

            elif token in [self.T__19]:
                self.state = 168 
                self.server()

            elif token in [self.T__18]:
                self.state = 169 
                self.publisher()

            elif token in [self.T__16]:
                self.state = 170 
                self.subscriber()

            else:
                raise NoViableAltException(self)

            self.state = 191
            _la = self._input.LA(1)
            if _la==ROSMOD_SoftwareParser.T__15:
                self.state = 173
                self.match(self.T__15)
                self.state = 185 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 185
                    token = self._input.LA(1)
                    if token in [self.T__12]:
                        self.state = 174
                        self.match(self.T__12)
                        self.state = 175
                        self.match(self.T__11)
                        self.state = 176 
                        self.priority()
                        self.state = 177
                        self.match(self.T__9)

                    elif token in [self.T__10]:
                        self.state = 179
                        self.match(self.T__10)
                        self.state = 180
                        self.match(self.T__11)
                        self.state = 181 
                        self.deadline()
                        self.state = 182 
                        self.unit()
                        self.state = 183
                        self.match(self.T__9)

                    else:
                        raise NoViableAltException(self)

                    self.state = 187 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==ROSMOD_SoftwareParser.T__12 or _la==ROSMOD_SoftwareParser.T__10):
                        break

                self.state = 189
                self.match(self.T__13)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClientContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ClientContext, self).__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,0)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_client

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterClient(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitClient(self)




    def client(self):

        localctx = ROSMOD_SoftwareParser.ClientContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_client)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(self.T__4)
            self.state = 194
            self.match(self.T__20)
            self.state = 195 
            self.datatype()
            self.state = 196
            self.match(self.T__6)
            self.state = 197 
            self.name()
            self.state = 198
            self.match(self.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ServerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ServerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,0)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_server

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterServer(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitServer(self)




    def server(self):
